--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
     "react": "^18.3.1",
